major refactoring gamemode -> deployment pt 2